@@ -473,17 +473,15 @@ symmetric positive definite matrix @var{a}.\n\
 
 %!test
 %! A = [2,0.2;0.2,1];
-%! issymmetric(A)
-%! min(eig(A))
 %! Ainv = inv(A);
 %! Ainv1 = cholinv(A);
 %! Ainv2 = inv(sparse(A));
 %! Ainv3 = cholinv(sparse(A));
 %! Ainv4 = spcholinv(sparse(A));
-%! assert (norm(Ainv-Ainv1),1e-10)
-%! assert (norm(Ainv-Ainv2),1e-10)
-%! assert (norm(Ainv-Ainv3),1e-10)
-%! assert (norm(Ainv-Ainv4),1e-10)
+%! assert (norm(Ainv-Ainv1),0,1e-10)
+%! assert (norm(Ainv-Ainv2),0,1e-10)
+%! assert (norm(Ainv-Ainv3),0,1e-10)
+%! assert (norm(Ainv-Ainv4),0,1e-10)
 
 */
 
